# nmea

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildnmeaTargets.cmake  nmeaConfig.cmake.in  vcpkg.json
include/nmea/: nmea_parser.hpp  nmea_parser_helper.hpp
include/nmea/grammars/: base_grammar.hpp
tests/: CMakeLists.txt
tests/src/: main.cpp
